# Porter-Local-Strategy-Agent

./: .git_commit_msg.txt  .gitignore  COMMIT_ARCHITECTURE.md  DESIGN_REVAMP_PROGRESS.md  DESIGN_REVAMP_V5_PLAN.md  DIMENSIONS_PROGRESS.md  PHASE_3.5_PLAN.md  PHASE_4_KICKOFF.md  PORTER_DIMENSIONS_PLAN.md  PROGRESS.md  README.md  _fix_deck.py  _fontdiag.py  _fontdiag2.py  config.yaml  design_playbook.md  docker-compose.yml  main.py  opus_WORKFLOW.md  porter.local.ps1.example  porter.ps1  porter12b.ps1  pyproject.toml  requirements.txt  strategy_agent_SPEC.md  switch-llm.ps1  switch-model.ps1  switch-profile.ps1
core/: __init__.py  artifact_framework.py  blocks.py  charts_image.py  clarification.py  composer.py  config.py  content_shaper.py  critic.py  deck_director.py  demo_showcase.py  design.py  diagrams.py  doc_synthesis.py  docling_reader.py  docx_reader.py  excel_builder.py  excel_reader.py  exporter.py  finance_reporting.py  font_embed.py  imagery.py  intake.py  intent_parser.py  json_utils.py  layout.py  memory.py  model_switch.py  pdf_reader.py  picker.py  pipeline.py  playbooks.py  pptx_reader.py  profile.py  recruiting.py  research_agent.py  researcher.py  searxng_health.py  startup.py  synthesizer.py  (+5 more)
llm/: __init__.py  local_llm_client.py
models/: __init__.py  deck.py  diagram.py  reporting.py  research.py  scoring.py  synthesis.py  task.py  visuals.py  workbook.py
output/: .best_demo.json  2026-05-31_q2_2026_performance_review_financial_health_and_st_briefing.md  2026-06-01_develop_a_comprehensive_business_case_analyzing_th_business_case.xlsx  2026-06-02_evaluate_figure_ai_as_a_potential_m_a_target_for_n_deck.pptx  2026-06-03_preparing_a_comprehensive_board_grade_presentation_deck.pptx
playbooks/: analysis_playbook.md  artifact_framework.md  deep_research_playbook.md  doc_prep_playbook.md  finance_reporting_playbook.md  output_playbook.md  recruiting_screening_playbook.md  research_playbook.md
scripts/: install_fonts.py
tests/: __init__.py  test_architecture.py  test_blocks.py  test_charts_image.py  test_clarification.py  test_composer.py  test_composition_render.py  test_config.py  test_content_shaper.py  test_critic.py  test_deck_director.py  test_demo_showcase.py  test_design.py  test_diagrams.py  test_doc_synthesis.py  test_docling_reader.py  test_docx_reader.py  test_excel_builder.py  test_excel_reader.py  test_exporter.py  (+26 more)
(+13 files in other folders)
